# freebj

./: Cargo.toml  LICENSE  README.md
doc/: freebj.1
rc/: shoe_1M
src/: basic_strategy.rs  betting.rs  card.rs  deviation.rs  game_rules.rs  hand.rs  hand_logic.rs  hand_stats.rs  lib.rs  main.rs  options.rs  output.rs  round.rs  round_factory.rs  running_stats.rs  simulator.rs  smp_simulator.rs  strategy.rs  test_utils.rs
src/shoe/: file_shoe.rs  mod.rs  queued_shoe.rs  standard_shoe.rs
tests/: file_shoe_simulations.rs
tests/utils/: bin_runner.rs  mod.rs
